--- a/src/styles.css
+++ b/src/styles.css
@@ -11,12 +11,16 @@ body {
   font-size: 32px;
 }
 
+#hatchedButtons {
+  display: none;
+}
+
 button {
   width: 100px;
   height: 75px;
   font-size: 28px;
 }
 
-/* .hatched {
+.afterHatched {
   display: none;
-} */
+}
